# zktoy

./: .gitignore  Cargo.toml  test.circom  test.r1cs  test.wtns
.github/workflows/: build.yml
bellman/: Cargo.toml
bellman/src/plonk/better_better_cs/: cs.rs
bellman/src/plonk/better_better_cs/proof/: mod.rs
bellman/src/plonk/better_better_cs/setup/: mod.rs
franklin-crypto/: Cargo.toml
franklin-crypto/.github/workflows/: ci.yml
franklin-crypto/src/: lib.rs
franklin-crypto/src/plonk/circuit/: mod.rs
src/: circom_circuit.rs  lib.rs  main.rs  plonk.rs  r1cs_file.rs  reader.rs  transpile.rs
